--- a/Projekat/Projekat/Views/Taxi/HomepageMusterija.cshtml
+++ b/Projekat/Projekat/Views/Taxi/HomepageMusterija.cshtml
@@ -6,4 +6,6 @@
 <h2>Dobrodosli, @(((Korisnik)Session["Ulogovan"]).Ime) @(((Korisnik)Session["Ulogovan"]).Prezime)</h2>
 
 <a href="/Taxi/Izmena">Izmenite profil</a><br />
+<a href="/Taxi/MusterijaZahtev">Zahtev za voznju</a><br />
+<a href="/Taxi/Pregledaj">Sve voznje</a><br />
 <a href="/Taxi/Odjava">Odjavite se</a>
