--- a/Projekat/Projekat/Views/Taxi/HomepageVozac.cshtml
+++ b/Projekat/Projekat/Views/Taxi/HomepageVozac.cshtml
@@ -7,5 +7,6 @@
 
 <a href="/Taxi/Izmena">Izmenite profil</a><br />
 <a href="/Taxi/PromeniLokaciju">Promenite lokaciju</a><br />
+<a href="/Taxi/GoToPromenaStatusaVoznje">Promenite status voznje</a><br />
 <a href="/Taxi/Odjava">Odjavite se</a>
 
