--- a/Projekat/Projekat/Views/Taxi/SignUp.cshtml
+++ b/Projekat/Projekat/Views/Taxi/SignUp.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-<h2>LogIn</h2>
+<h2>SignUp</h2>
 <form action="/Taxi/SignUp" method="post">
     <table border="0">
         <tr>
